--- a/public/style.css
+++ b/public/style.css
@@ -10,18 +10,18 @@
   margin: 2%;
 }
 .heading {
-  margin-top: 2%;
-  font-size: 2.5em;
-  font-weight: bold;
+  margin-top: 1%;
+  font-size: 3em;
+  font-weight: bolder;
   text-align: center;
   position: inherit;
-  color: #AD9B7F
+  color: #F2F2F2;
+  font-family: 'Apple Chancery';
 }
 
 /* div on all of the items */
 .wrapper {
   display: flex;
-  border: 3px solid red;
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: center;
@@ -31,13 +31,13 @@
 .list {
   display: flex;
   flex-direction: row;
-  border: 4px solid #AD9B7F;
+  border: 6px solid #AD9B7F;
   width: 25rem;
   height: 25rem;
   margin: 2em 1em;
   display: inline-block;
   text-align: center;
-  padding: 1rem;
+  padding: 1.5rem;
   border-radius: 5%;
   background-color: #F2F2F2;
 }
@@ -57,9 +57,9 @@
 }
 
 .item-title {
-  font-size: 1rem;
+  font-size: 1.2rem;
   font-weight: bold;
-  color: #2A3C29;
+  color: #466344;
   text-align: center;
   padding: 3%;
   background-color: #F2F2F2;
@@ -77,7 +77,7 @@
   text-align: center;
   font-weight: bold;
   font-style: oblique;
-  padding: 2%;
+  padding: 4%;
   background-color: #F2F2F2;
 }
 
@@ -123,4 +123,37 @@ a {
 
 li a:hover {
   background-color: #957777;
+}
+
+.item-div-line {
+  border: 1.1px solid #957777;
+  margin: auto;
+  margin-top: 1.5%;
+  margin-bottom: 1%;
+  width: 30%;
+  align-self: center;
+}
+
+.item-div-line2 {
+  border: 1.1px solid #957777;
+  margin: auto;
+  margin-top: 1%;
+  width: 90%;
+  align-self: center;
+}
+
+.main-button {
+  border: 2px solid #957777;
+  display: block;
+  width: 20%;
+  margin: auto;
+  margin-bottom: 4%;
+  background-color: #466344;
+  color:#F2F2F2;
+  padding: 1%;
+  font-size: 1rem;
+  cursor: pointer;
+  text-align: center;
+  font-size: 1.2em;
+  font-weight: bold;
 }
