--- a/public/style.css
+++ b/public/style.css
@@ -17,7 +17,7 @@
   margin: 2%;
 }
 .heading {
-  margin-top: 1%;
+  margin-top: 0.5%;
   font-size: 3em;
   font-weight: bolder;
   text-align: center;
@@ -80,7 +80,7 @@
 }
 
 .item-price {
-  font-size: 1.2em;
+  font-size: 1.3em;
   text-align: center;
   font-weight: bold;
   font-style: oblique;
@@ -108,7 +108,7 @@
 .nav ul {
   list-style: none;
   display: flex;
-  gap: 1rem;
+  gap: 0.5rem;
 }
 
 li {
@@ -169,12 +169,12 @@ li a:hover {
   color: var(--darkgreen);
 }
 
-.single-view:hover {
-  color: var(--yellow);
-}
-
 .single-view:visited {
   color: var(--darkgreen);
+}
+
+.single-view:hover {
+  color: #957777;
 }
 
 .form-wrapper {
@@ -185,4 +185,23 @@ li a:hover {
   display: flex;
   flex-direction: column;
   color: var(--white);
+}
+
+/* each category block - content within div */
+.category {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  flex-wrap: wrap;
+  margin: auto;
+  padding: auto;
+}
+
+.category-title {
+  display: block;
+  block-size: auto;
+  font-weight: bolder;
+  margin: 3%;
+  text-decoration: underline;
+  color: #F2F2F2;
 }
