--- a/public/style.css
+++ b/public/style.css
@@ -23,7 +23,6 @@
   text-align: center;
   position: inherit;
   color: var(--white);
-  font-family: "Apple Chancery";
 }
 
 /* div on all of the items */
@@ -165,6 +164,21 @@ li a:hover {
   font-weight: bold;
 }
 
+.main-button {
+  color: white;
+  text-decoration: none;
+}
+
+.main-button:visited {
+  color: var(--white);
+  text-decoration: none;
+}
+
+.main-button:hover {
+  color: #957777;
+  text-decoration: none;
+}
+
 .single-view {
   color: var(--darkgreen);
 }
@@ -201,7 +215,7 @@ li a:hover {
   display: block;
   block-size: auto;
   font-weight: bolder;
-  margin: 3%;
+  margin: 2.4%;
   text-decoration: underline;
   color: #F2F2F2;
 }
