--- a/public/style.css
+++ b/public/style.css
@@ -26,6 +26,27 @@
   font-family: "Apple Chancery";
 }
 
+.individual-title {
+  margin-top: 1%;
+  font-size: 3em;
+  font-weight: bolder;
+  text-align: center;
+  position: inherit;
+  color: var(--white);
+  font-family: "Apple Chancery";
+
+}
+
+.category-header {
+  text-align: center;
+  color: var(--white);
+}
+
+.descriptive-text {
+  color: var(--white);
+  font-size: 1.5em;
+}
+
 /* div on all of the items */
 .wrapper {
   display: flex;
@@ -56,6 +77,13 @@
   width: 57%;
   height: 50%;
   border-radius: 3%;
+}
+
+.individual-img {
+  margin-top: 5%;
+  margin-bottom: 5%;
+  width: 70%;
+
 }
 
 .item-line {
@@ -163,6 +191,60 @@ li a:hover {
   text-align: center;
   font-size: 1.2em;
   font-weight: bold;
+}
+
+
+
+.edit-button {
+    border: 2px solid var(--brown);
+    display: block;
+    width: 20%;
+    margin: auto;
+    margin-bottom: 4%;
+    background-color: var(--lightgreen);
+    color: var(--white);
+    padding: 1%;
+    padding-right: 70%;
+    padding-left: 30%;
+    font-size: 1rem;
+    cursor: pointer;
+    text-align: center;
+    font-size: 1.2em;
+    font-weight: bold;
+  
+}
+
+.delete-button {
+    border: 2px solid var(--brown);
+    display: block;
+    width: 20%;
+    margin: auto;
+    margin-bottom: 4%;
+    background-color: var(--lightgreen);
+    color: var(--white);
+    padding: 1%;
+    padding-left: 20%;
+    padding-right: 80%;
+    font-size: 1rem;
+    cursor: pointer;
+    text-align: center;
+    font-size: 1.2em;
+    font-weight: bold;
+  
+}
+
+.button-flex{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  gap: 10%;
+}
+
+.individual-flex-column{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  
 }
 
 .single-view {
