--- a/public/style.css
+++ b/public/style.css
@@ -175,7 +175,7 @@ li a:hover {
 }
 
 .main-button:hover {
-  color: #957777;
+  color: var(--brown);
   text-decoration: none;
 }
 
@@ -188,7 +188,7 @@ li a:hover {
 }
 
 .single-view:hover {
-  color: #957777;
+  color: var(--brown);
 }
 
 .form-wrapper {
@@ -217,12 +217,12 @@ li a:hover {
   font-weight: bolder;
   margin: 2.4%;
   text-decoration: underline;
-  color: #F2F2F2;
+  color: var(--white);
   text-align: center;
 }
 
 .search-bar {
-  border: 2px solid #957777;
+  border: 2px solid var(--brown);
   height: 2.5em;
   width: 14%;
   border-radius: 3px;
