--- a/public/style.css
+++ b/public/style.css
@@ -38,8 +38,8 @@
   display: flex;
   flex-direction: row;
   border: 6px solid var(--yellow);
-  width: 25rem;
-  height: 25rem;
+  width: 25.5rem;
+  height: 26rem;
   margin: 2em 1em;
   display: inline-block;
   text-align: center;
@@ -248,6 +248,13 @@ li a:hover {
   width: 90%;
   border: 2px solid var(--brown);
   border-radius: 6px;
+  color: var(--white);
+  padding: 2em;
+}
+
+.edit-view-img {
+  width: 22em;
+  height: 25em;
 }
 
 /* each category block - content within div */
