--- a/public/style.css
+++ b/public/style.css
@@ -40,12 +40,10 @@
 .category-header {
   text-align: center;
   color: var(--white);
+  font-size: 140%;
 }
 
-.descriptive-text {
-  color: var(--white);
-  font-size: 1.5em;
-}
+
 
 /* div on all of the items */
 .wrapper {
@@ -204,8 +202,8 @@ li a:hover {
     background-color: var(--lightgreen);
     color: var(--white);
     padding: 1%;
-    padding-right: 70%;
-    padding-left: 30%;
+    padding-right: 130%;
+    padding-left: 50%;
     font-size: 1rem;
     cursor: pointer;
     text-align: center;
@@ -224,7 +222,7 @@ li a:hover {
     color: var(--white);
     padding: 1%;
     padding-left: 20%;
-    padding-right: 100%;
+    padding-right: 120%;
     font-size: 1rem;
     cursor: pointer;
     text-align: center;
@@ -238,6 +236,7 @@ li a:hover {
   flex-direction: row;
   justify-content: center;
   gap: 10%;
+  
 }
 
 .individual-flex-column{
@@ -245,6 +244,40 @@ li a:hover {
   flex-direction: column;
   align-items: center;
   
+}
+
+.text-flex {
+  display: flex;
+  flex-direction: column;
+  padding-left: 20%;
+  padding-right: 20%;
+  margin-bottom: 10%;
+  margin-top: 2%;
+  border-radius: 8px;
+  
+}
+
+.descriptive-text1 {
+  color: var(--white);
+  font-size: 1.5em;
+  background: #ad9b7f;
+  padding: 10%;
+  margin-bottom: -10%;
+  
+}
+.descriptive-text2 {
+  color: var(--white);
+  font-size: 1.5em;
+  background: #ad9b7f;
+  padding: 10%;
+  
+  
+}
+
+.p-div1 {
+margin-bottom: 2%;
+padding-bottom: 5%;
+
 }
 
 .single-view {
