--- a/public/style.css
+++ b/public/style.css
@@ -194,23 +194,11 @@ li a:hover {
   font-weight: bold;
 }
 
-.buttons-class {
-  display: flex;
-}
-
 .edit-button {
   border: 2px solid var(--brown);
-  display: block;
-  width: 20%;
-  margin: auto;
-  margin-bottom: 4%;
   background-color: var(--lightgreen);
   color: var(--white);
-  padding: 1%;
-  padding-right: 70%;
-  padding-left: 30%;
   font-size: 1rem;
-  cursor: pointer;
   text-align: center;
   font-size: 1.2em;
   font-weight: bold;
@@ -219,14 +207,8 @@ li a:hover {
 .delete-button {
   border: 2px solid var(--brown);
   display: block;
-  width: 20%;
-  margin: auto;
-  margin-bottom: 4%;
   background-color: var(--lightgreen);
   color: var(--white);
-  padding: 1%;
-  padding-left: 20%;
-  padding-right: 100%;
   font-size: 1rem;
   cursor: pointer;
   text-align: center;
@@ -236,9 +218,8 @@ li a:hover {
 
 .button-flex {
   display: flex;
-  flex-direction: row;
-  justify-content: center;
-  gap: 10%;
+  align-items: center;
+  width: 100%;
 }
 
 .individual-flex-column {
