feat: added dynamic home button which does not show on home page and brings a user back to the main page

--- a/public/style.css
+++ b/public/style.css
@@ -10,6 +10,16 @@ html {
   scroll-behavior: smooth;
 }
 
+.home {
+  width: 5%;
+  height: 5%;
+  fill: #000000;
+}
+
+.home:hover {
+  fill: var(--lightgreen);
+}
+
 * {
   margin: 0;
   box-sizing: border-box;
